# CMakeList.txt : CMake project for ray_tracing_in_one_weekend, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (ray_tracing_in_one_weekend "ray_tracing_in_one_weekend.cpp" "ray_tracing_in_one_weekend.h")

# TODO: Add tests and install targets if needed.
